@@ -1,0 +1,1 @@
+pylint -d W0142,R0201,R0904,C0301,C0103,C0302,R0903,W0212 qitensor
