@@ -1,6 +1,5 @@
-import cartan_decompose_impl
-
 import qitensor
+import cartan_decompose_impl
 
 def unitary_to_cartan(U):
     """
