@@ -5,6 +5,7 @@ Version 0.7.1 (ongoing):
 	memoization and better pickling for base field, atom, space
 	index_set is a tuple
 	much refactoring of code
+	cleanup for pylint
 
 Version 0.7 (2011-08-09):
 	added QR and random_unitary methods
